tdf#166544 writerfilter page break: field-end counts as a character run

For compat14, page breaks that are not the first run
do not apply the top margin after the page break.
That makes sense. The top margin has already been applied
before the break.

The end marker of a field (ToC, legacy text form field, hyperlinks...)
must be treated as one of these character runs,
since MS Word doesn't apply the top margn in these instances.

The bug report contains examples for ToC and formfield,
so I used the hyperlink example as my unit test.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf166544_noTopMargin_fields

Change-Id: Ia3efced0d301c2345667937521beb8e7c895d326
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185375
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185378
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>