sw/source/writerfilter/dmapper/DomainMapper_Impl.cxx
@@ -9106,6 +9106,8 @@ void DomainMapper_Impl::PopFieldContext()
                         }
                     }
                 }
+
+                SetIsFirstRun(false); // the end marker counts as a run - affecting page breaks
             }
             catch(const lang::IllegalArgumentException&)
             {
